# WFC-Python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/wfc/: core.py  main.py  postprocess.py  preprocess.py
wfc/: core.py  main.py  postprocess.py  preprocess.py
